@@ -164,3 +164,7 @@ b5bfa8e658de7b481c001c1f6b330bcb  tzdata-2016i.tar.gz
 450b5c381c83df8f117824e7d0fe0076  nvme-cli-1.1.tar.gz
 be4601619827b7935e1d861745923a68  freetype-2.7.tar.bz2
 bb7368117320d8d2b2c9403f0f3530a2  ledmon-0.80.tar.gz
+9402457fbe84e2ff2a7588fcdf2cd125  nvmetcli-ec76995.tar.gz
+b86a2d6c33727db526dbb17702d8e2a6  configshell-fb-1.1.fb23.tar.gz
+34eed507548117b2ab523ab14b2f8b55  six-1.10.0.tar.gz
+065908b92904e0d3634eb156f44cc80e  pyparsing-2.1.10.tar.gz
