@@ -164,3 +164,7 @@ f199171613ec2da757fe0a7523a58057c15e22d308cf0079c5c64459451e751a  tzdata-2016i.t
 22883719cbab86d52e8d4755e86ebd70476416e87442385a79b31c981bd60de1  nvme-cli-1.1.tar.gz
 d6a451f5b754857d2aa3964fd4473f8bc5c64e879b24516d780fb26bec7f7d48  freetype-2.7.tar.bz2
 5000b0114c82d04b0bebdfe205458c39eed19cd002868790b2fb498c26917128  ledmon-0.80.tar.gz
+9976a4f4ca846533450c6923321048dcbada8e26ae470455fe3a8eb754b443db  nvmetcli-ec76995.tar.gz
+63f7f814bf27d6dc5d6b3bbdd1da89a2a250f5662a67eaa781b9599779fdebb9  configshell-fb-1.1.fb23.tar.gz
+105f8d68616f8248e24bf0e9372ef04d3cc10104f1980f54d57b2ce73a5ad56a  six-1.10.0.tar.gz
+811c3e7b0031021137fc83e051795025fcb98674d07eb8fe922ba4de53d39188  pyparsing-2.1.10.tar.gz
