@@ -1159,8 +1159,11 @@ CONFIG_BLK_DEV_RBD=y
 CONFIG_NVME_CORE=y
 CONFIG_BLK_DEV_NVME=y
 # CONFIG_BLK_DEV_NVME_SCSI is not set
-# CONFIG_NVME_RDMA is not set
-# CONFIG_NVME_TARGET is not set
+CONFIG_NVME_FABRICS=y
+CONFIG_NVME_RDMA=y
+CONFIG_NVME_TARGET=y
+CONFIG_NVME_TARGET_LOOP=y
+CONFIG_NVME_TARGET_RDMA=y
 
 #
 # Misc devices
